--- a/static-1/etc/nginx.conf
+++ b/static-1/etc/nginx.conf
@@ -1,8 +1,12 @@
-server {
+events {
+    worker_connections   1024;
+}
+http {
+  server {
           listen 80 default_server;
           proxy_set_header Host               $host;
           proxy_set_header X-Real_IP          $remote_addr;
-          
+
           location ^~ /hello/ {
                   proxy_pass http://0.0.0.0:8080;
           }
@@ -15,4 +19,5 @@ server {
           location / {
                   return 404;
           }
+}
 }
